using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimationStrings
{
    public static string IsMoving = "IsMoving";
    public static string IsSprint = "IsSprint";
    public static string yVelocity = "yVelocity";
    public static string Jump = "Jump";
    public static string IsGrounded = "IsGrounded";
    public static string Attack = "Attack";
    public static string CanMove = "CanMove";
    public static string CoolTime = "CoolTime";
    public static string HasTarget = "HasTarget";
    public static string IsAlive = "IsAlive";
}
